--- a/src/Makefile
+++ b/src/Makefile
@@ -28,11 +28,13 @@ LEXCFLAGS = -O $(CFLAGS)
 SCANNER = scanner.cpp
 PARSER  = parser.cpp parser.hpp location.hh position.hh stack.hh
 AST     = ast/ast.o ast/ast_add_expr.o ast/ast_and_expr.o  ast/ast_or_expr.o\
-          ast/ast_assign_expr.o ast/ast_bool_const.o \
+          ast/ast_assign_expr.o ast/ast_bool_const.o\
+		  ast/ast_array_ref.o ast/ast_array_type.o \
           ast/ast_bool_type.o ast/ast_bitnot_expr.o \
 		  ast/ast_call_expr.o \
           ast/ast_cmp_expr.o ast/ast_div_expr.o ast/ast_equ_expr.o ast/ast_neq_expr.o ast/ast_expr_stmt.o \
 		  ast/ast_for_stmt.o \
+		  ast/ast_index_expr.o \
           ast/ast_if_stmt.o ast/ast_int_const.o ast/ast_int_type.o \
           ast/ast_lvalue_expr.o ast/ast_mod_expr.o \
           ast/ast_mul_expr.o ast/ast_neg_expr.o \
@@ -95,6 +97,10 @@ ast/ast_add_expr.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
 ast/ast_add_expr.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
 ast/ast_and_expr.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
 ast/ast_and_expr.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
+ast/ast_array_ref.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
+ast/ast_array_ref.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
+ast/ast_array_type.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
+ast/ast_array_type.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
 ast/ast_assign_expr.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
 ast/ast_assign_expr.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
 ast/ast_bitnot_expr.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
@@ -123,6 +129,8 @@ ast/ast_func_defn.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
 ast/ast_func_defn.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
 ast/ast_if_stmt.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
 ast/ast_if_stmt.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
+ast/ast_index_expr.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
+ast/ast_index_expr.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
 ast/ast_int_const.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
 ast/ast_int_const.o: 3rdparty/list.hpp error.hpp ast/ast.hpp ast/visitor.hpp
 ast/ast_int_type.o: config.hpp 3rdparty/boehmgc.hpp define.hpp
